<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fynal Rep Demo</string>
    <string name="recognize_file">Recognize File</string>
    <string name="recognize_microphone">Recognize Microphone</string>
    <string name="stop_microphone">Stop Microphone</string>
    <string name="preparing">Preparing the recognizer\n</string>
    <string name="ready">Ready\n</string>
    <string name="failed">Failed to init recognizer %s\n</string>
    <string name="elapsed">Result %s elapsed %d milliseconds\n</string>
    <string name="starting">Starting\n</string>
    <string name="say_something">Say something\n</string>
    <string name="sign_in_back">Sign In</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_a_password">Enter Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="next_page">next page</string>
    <string name="enter_a_username">Enter Username</string>

</resources>
